styles/style.css
* {
  box-sizing: border-box;
}

/*** rem scale ***/
html {
  font-size: 14px;
}

/*** mobile rem scale ***/
@media screen and (max-width: 600px) {
  html {
    font-size: 12px;
  }
}

/*** general container styling ***/
.container {
  background-color: #fff;
  margin: 0 auto;
  width: 90%;
}

/*** links and button styling ***/
a {
  text-decoration:
  none;
}

a:hover, .nav-menu a:hover {
  color: #000;
}

a:active, .nav-menu a:active {
  color: #DE9B43;
}

button, .btn, a.btn, .form button, #submit {
  background-color: #DE9B43;
  border-style: none;
  box-shadow: 0 0.25rem 0.25rem 0 rgba(0, 0, 0, 0.25);
  color: #fff;
  cursor: pointer;
  font-family: "Signika", sans-serif;
  font-size: 1.25rem;
  height: 2.5rem;
  text-align: center;
  padding: 10px;
  width: 90%;
  max-width: 350px;
}

a.btn:hover, #submit:hover {
  background-color: #43A6DE;
  cursor: pointer;
}

a.btn:active, #submit:active {
  color: #000;
}

/*** Typography ***/
h1, h2, h3, h4, h5 {
  color: #000;
  font-family: "Signika", sans-serif;
}

h1, h2 {
  color: #fff;
}

h3, h4, h5 {
  font-weight: 400;
}

h1 {
  font-size: 3rem;
  font-weight: 600;
}

h2 {
  font-size: 2.25rem;
  font-weight: 400;
  line-height: 3rem;
}

h3 {
  font-size: 1.75rem;
  line-height: 2.25rem;
}

h4 {
  font-size: 1.5rem;
  font-weight: 300;
}

h5 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.875rem;
  font-weight: 600;
  letter-spacing: 0.25rem;
}

h6 {
  color: #fff;
  font-family: "Open Sans", sans-serif;
  font-size: 0.875rem;
  font-weight: 600;
  margin: 0 auto;
}

p, ul {
  color: #000;
  font-family: "Open Sans", sans-serif;
  font-size: 1.25rem;
  line-height: 1.75rem;
}

i {
  font-style: italic;
}

/*** structure ***/
header {
  display: inline-block;
  width: 100%;
}

/* navigation */
nav {
  height: 4.5rem;
  margin: 1rem auto;
  max-width: 90%;
}

nav img {
  float: left;
}

nav li {
  font-weight: 600;
  line-height: 2rem;
  margin: 0;
  text-indent: 0;
}

nav .icon {
  display: none;
}

.nav-menu a {
  color: #fff;
  float: right;
  font-size: 1.125rem;
  margin-left: 2rem;
  padding-top: 1.25rem;
}

/* mobile nav */
@media screen and (max-width: 600px) {
  nav img {
    height: 48px;
    width: 48px;
  }

  nav ul {
    display: none;
  }

  .nav-menu a {
    float: none;
    margin-left: 0;
  }

  nav ul li {
    height: 20px;
    margin: 1rem auto;
  }

  nav a.icon {
    color: #fff;
    display: inline;
    float: right;
    padding: 1.25rem;
  }

  nav ul.opened {
    background: linear-gradient(to bottom right, rgba(51,51,51,0.8),rgba(51,51,51,1));
    display: block;
    height: 150px;
    position: absolute;
    text-align: center;
    top: 70px;
    width: 90%; }
}

/* contact info */
#landing-contact-footer, .contact-footer {
  display: inline-block;
  padding: 2rem;
  width: 100%;
}

#landing-contact-footer h3, #landing-contact-footer h4, .contact-footer h3, #landing-contact-footer h4, .contact-footer h4 {
  color: #fff;
  margin: 0 10%;
  text-align: center;
}

#landing-contact-footer h3, .contact-footer h3 {
  font-size: 2rem;
  font-weight: 700;
}

#landing-contact-footer h4, .contact-footer h4 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 2rem;
  margin: 1rem auto;
  max-width: 80%;
}

.contact-footer ul {
  color: #fff;
  font-size: 1.25rem;
  line-height: 2rem;
  margin: auto 10%;
  text-align: center;
}

#landing-contact-footer .btn, .contact-footer .btn {
  display: block;
  margin: 0 auto;
}

/* footer */
footer {
  background: linear-gradient(#43A6DE, #1D6891);
  height: 4rem;
}

.footer-icons {
  float: right;
  margin: 1.25rem 5% 1rem 1rem;
}

.footer-icons img {
  margin-left: 3rem;
  width: 24px;
}

.copyright, .dark-copyright {
  color: #fff;
  float: left;
  font-family: "Open Sans", sans-serif;
  font-size: 0.875rem;
  font-weight: 300;
  margin: 1rem 1rem 1rem 5%;
  padding-top: 0.6rem;
}

.dark-copyright {
  color: #000;
}

@media screen and (max-width: 600px) {
  .footer-icons {
    margin: 1.25rem 5% 1rem 0;
  }
}

@media screen and (max-width: 450px) {
  .footer-icons img {
    margin-left: 0.75rem;
  }
}

/******************** landing page styling ********************/
/* hero image & header */
#landing-header {
  background: url(../assets/landing/landing-page-hero-image.jpg) center / cover;
  background-repeat: no-repeat;
}

#intro-text {
  margin: 0 auto;
  padding: 25vh 0;
  max-width: 42%;
}

#intro-text h1 {
  padding-bottom: 1rem;
}

.changing-word {
  display: inline;
}

.changing-word span {
  display: inline-block;
  margin-left: 5px;
}

#mobile-intro-text {
  display: none;
}

/* tablet landing page header */
@media screen and (max-width: 900px) {
  #landing-header {
    background: linear-gradient(#43A6DE, #1D6891);
    text-align: center;
  }

  #landing-header h1, #landing-header h2 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }

  #intro-text {
    display: none;
  }

  #mobile-intro-text {
    display: inherit;
    margin: 2rem auto;
    padding: 10vh 0;
    max-width: 70%;
  }

  #mobile-intro-text h1 {
    padding-bottom: 1rem;
  }
}

/* mobile landing page header */
@media screen and (max-width: 600px) {

  #landing-header nav {
    margin-bottom: 0;
  }

  #landing-header h1, #landing-header h2 {
    font-size: 1.5rem;
    line-height: 2rem;
  }

  #mobile-intro-text {
    padding: 5vh 0;
    max-width: 70%;
  }
}

/* header animation */
.changing-word span {
  animation: "fade" 12s infinite;
  -moz-animation: "fade" 12s infinite;
  -ms-animation: "fade" 12s infinite;
  -webkit-animation: "fade" 12s infinite;
  color: #DE9B43;
  display: inline;
  opacity: 0;
  position: absolute;
}

.changing-word span:nth-child(2) {
  animation-delay: 3s;
  -moz-animation-delay: 3s;
  -ms-animation-delay: 3s;
  -webkit-animation-delay: 3s;
}

.changing-word span:nth-child(3) {
  animation-delay: 6s;
  -moz-animation-delay: 3s;
  -ms-animation-delay: 6s;
  -webkit-animation-delay: 6s;
}
/* ... */

